   Reported by Xeero and Padraic. [MG]
 * Loading a reboot db is more robust. Inspired by Padraic. [SW]
 * scan() couldn't be used by rooms. Reported by Padraic. [MG]
 * Possible crashbug in the queue triggered by events reported by
   Rince@Wing Commander: New Horizon. [MG]
 * @list attribute would show duplicates for aliases. [MG]
 * insert(,foo,-1) no longer appends an extra delimiter. [MG]

Commands:
 * @edit/regexp[/all][/nocase], command version of regedit[all][i]().
   Suggested by Minion. [MG]

Functions:
 * ldelete(), replace(), elements() and extract() now accept negative
   position arguments, to count backwards from the end of the list, similar 
   to insert(). Suggested by Minion. [MG]
 * replace() now takes an optional output separator. [MG]

Minor changes:
 * Logged messages now have events in the LOG tree. Suggested by
   Padraic. [SW]
 * Objects belonging to destroyed players now get chowned to a
   configurable player (probate_judge in mush.cnf) instead of
   God. [SW]
 * regmatch() now returns an error for invalid regexps, whether you're
   storing subpattern matches or not. Reported by Sketch. [MG]
 * Commands involving movement now check the enactor is a player/thing,
   instead of just relying on the command's restriction. [MG]
 * @switch, switch(), @[in]filter and attribute @locks (foo:bar) now do
   lte/gte wildcard matches on <=foo and >=foo patterns. Inspired by 
   Wiggles. [MG]
 * New channel mogrifier, MOGRIFY`NOBUFFER, can be used to exclude certain
   @chats from the channel's recall buffer. Suggested by Wiggles. [MG]
 * version() now reports svn revision/date where available. Patch by
   Padraic.
 * The @sql command no longer uses UNIMPLEMENTED_COMMAND when SQL support
   is not compiled into the MUSH. Instead, it just reports that no SQL db
   is available, like @mapsql does. [MG]

Version 1.8.5 patchlevel 0                                 Feb 12, 2012

Major changes: