@@ -1977,14 +1977,15 @@ See also: FLAGS, @set, @power, flag permissions
   <switch> can be one of:
   /disable, to disable a function.
   /enable, to re-enable it.
-  /delete, to remove a user-defined function or allow a built-in function
-           to be overriden by a user-defined one.
+  /delete, to remove a user-defined or cloned function, or allow a built-in
+           function to be overriden by a user-defined one.
   /restrict, to change the restriction flags on an existing function.
   
   @function/alias creates an alias for the built-in function <function name>
   so that it can also be called as <alias>. @function/clone creates a new
   copy of <function name> named <clone>, which works the same initially but
-  can be restricted separately. You cannot alias or clone @functions.
+  can be restricted separately. You cannot alias or clone @functions, or
+  alias cloned functions.
 
   Otherwise, this command defines a global function with the name
   <function name>, which evaluates to <attribute> on <object>.
@@ -2060,7 +2061,7 @@ See also: FLAGS, @set, @power, flag permissions
   and that needs two arguments, like the built-in version. It will be
   restricted to non-guest players.
 
-See also: RESTRICT, FUNCTIONS, @startup, fn()
+See also: RESTRICT, FUNCTIONS, @startup, fn(), valid()
 & @grep
   @grep[/<switches>] <object>[/<attrs>]=<pattern>
   
